--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
   </head>
   <body>
     <div class="container">
-      <div class="backdrop">
+      <div class="backdrop"></div>
+      <div class="first-row">
         <header class="header">
           <div class="logo">Netflix</div>
-          <select name="" id="" class="lang-select" onChange="go()"> 
+          <select name="" id="" class="lang-select" onChange="go()">
             <option value="https://www.netflix.com/ee/">English</option>
             <option value="https://www.netflix.com/ee-ru/">Russian</option>
           </select>
@@ -26,8 +27,22 @@
             membership.
           </h3>
           <form action="index.html">
-              <input type="email" name="email" placeholder="Email address" id=""><button type="submit">Get Started ></button>
+            <input
+              type="email"
+              name="email"
+              placeholder="Email address"
+              id=""
+            /><button type="submit">Get Started ></button>
           </form>
+        </div>
+      </div>
+      <div class="second-row">
+        <div class="second-row--titles">
+          <h1>Enjoy on your TV.</h1>
+          <h2>
+            Watch on Smart TVs, Playstation, Xbox, Chromecast, Apple TV, Blu-ray
+            players, and more.
+          </h2>
         </div>
       </div>
     </div>
